fixed perfect-scrollbar logic due to their change in file structure

--- a/generator-personal-scss/generators/app/templates/src/client/assets/scss/index.scss
+++ b/generator-personal-scss/generators/app/templates/src/client/assets/scss/index.scss
@@ -9,7 +9,7 @@
 // These relative paths will screw up the source maps, but I've decided
 //   that's better than than having to copy the files locally every time the library updates
 @import '../../../../node_modules/normalize.scss/normalize.scss';
-<% if (includePerfectScrollbar) { %>@import '../../../../node_modules/perfect-scrollbar/src/perfect-scrollbar';
+<% if (includePerfectScrollbar) { %>@import '../../../../node_modules/perfect-scrollbar/src/css/perfect-scrollbar';
 @import 'partials/perfect-scrollbar-overrides';<% } %>
 
 
